--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body,p,h2,h1,h3{
 }
 
 header {
-	background-image: linear-gradient(to right, transparent 50%, #E51837 50%);
+	background-image: linear-gradient(to right, transparent 53%, #E51837 50%);
 }
 
 .container {
@@ -18,7 +18,6 @@ header {
 
 
 section:nth-child(n+3) {
-	padding: 0px 20px;
 	margin-bottom: 50px;
 }
 
@@ -29,6 +28,7 @@ img {
 a {
 	text-decoration: none;
 	color: #000;
+	
 }
 
 ul li {
@@ -42,6 +42,7 @@ h1,h2,h3,h4 {
 }
 h1 {
 	font-size: 45px;
+	font-weight: 600;
 }
 
 h2,h3 {
@@ -132,6 +133,7 @@ p {
 	color: #fff;
 	text-align: center;
 	display:block;
+	font-size: 12px;
 }
 
 .navigation {
@@ -162,8 +164,6 @@ p {
 .location-box {
 	background: #B50A37;
 	text-align: center;
-	padding: 20px 0px;
-	margin-bottom: 20px;
 }
 
 .location-box:not(:last-child){
@@ -186,11 +186,14 @@ p {
 .burger-header a{
 	color: #fff;
 	font-size: 15px;
+	font-weight: bold;
+	font-size: 12px;
 }
 
 .yum-burger .container {
 	background-image:linear-gradient(to bottom, #fff 20%, #E51837 10%);
 	padding-bottom: 20px;
 }
+
 
 
