--- a/media.css
+++ b/media.css
@@ -1,8 +1,10 @@
 @media screen and (min-width: 1450px) {
-
+	h2 {
+		font-size: 100px;
+		max-width:1000px;
+	}
 	h4 {
 		font-size: 50px;
-		width: 800px;
 		font-weight: 600;
 	}
 	.navigation {
@@ -115,25 +117,32 @@
 	/*********************jolly burger style********************/
 	.yum-burger {
 		position: relative;
+		margin: 100px 0px;
+
 	}
+
 	.yum-burger .container {
 		display: flex;
-		padding: 100px;
-		background-image:linear-gradient(to right, #fff 20%, #E51837 10%);
+		justify-content: flex-end;
 	}
+
 	.burger-images {
 		position: absolute;
-		left: 0;
-		top: 0;
+		left: 0px;
+		top: -30px;
 	}
 
 	.burger-header {
-		position: relative;
-		left: 550px;
+		padding:60px 0px ;
+		max-width: 60%;
+
 	}
 
+	/**********************box number style************************************/
 
-
+	.box-banner {
+		margin-top: 150px;
+	}
 
 }
 
@@ -182,11 +191,20 @@
 	.uneven:last-child{
 		width: 60;
 	}
+
+	.box-column2 {
+		display: grid;
+		gap: 50px;
+		grid-template-columns: repeat(3,1fr);
+		
+	}
+
 }
 
 @media screen and (min-width: 480px) {
 	h1 {
 		font-size: 80px;
 	}
+	/**********************box number style************************************/
 
 }
